syntax = "proto3";

package web.resource.tester;

import "google/protobuf/timestamp.proto";

option java_package = "com.proto.web.resource.tester";
option java_multiple_files = true;

message TestResourceRequest {
  string resource_url = 1;
}

message TestResourceResponse {
  string status_code = 1;
  int32 request_duration = 2;
}

service WebResourceTesterService {
  rpc TestResource(TestResourceRequest) returns (TestResourceResponse){};
}